# daily-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: application-unit-tests.yaml  issue-create.yaml  tests.yaml  unit-tests.yaml
daily_tracker/: __init__.py  __main__.py  _actions.py  actions.py  logger.yaml  main.py  tracker_utils.py  utils.py
daily_tracker/core/: __init__.py  actions.py  apis.py  configuration.py  configuration.yaml  create.py  data.py  database.py  form.py  scheduler.py
daily_tracker/core/database/: __init__.py  database.py
daily_tracker/core/handlers/: __init__.py
daily_tracker/core/scripts/: create.sql  reporting.sql
daily_tracker/frontend/: frontend.py
daily_tracker/integrations/: __init__.py  jira.py  jira_connector.py  slack.py
daily_tracker/integrations/calendars/: __init__.py  calendars.py  outlook_mac.py  outlook_windows.py
daily_tracker/resources/: configuration.schema.json  configuration.yaml
src/daily_tracker/: __init__.py  __main__.py  _actions.py  cli.py  create.py  main.py  utils.py
src/daily_tracker/core/: __init__.py  actions.py  apis.py  configuration.py  configuration.yaml  core.py  create.py  database.py  form.py  scheduler.py
src/daily_tracker/core/database/: __init__.py  create.sql  database.py  reporting.sql
src/daily_tracker/core/handlers/: __init__.py  handlers.py
src/daily_tracker/core/reports/: __init__.py  report.py
src/daily_tracker/core/reports/queries/: daily.sql  day.sql  task-details.sql  today.sql  weekly.sql  yesterday.sql
src/daily_tracker/core/scripts/: create.sql  reporting.sql
src/daily_tracker/frontend/: frontend.py
src/daily_tracker/integrations/: __init__.py  github.py  jira.py  jira_connector.py  monday.py  slack.py  slack_connector.py
src/daily_tracker/integrations/calendars/: __init__.py  calendars.py  google_calendar.py  outlook_mac.py  outlook_windows.py
src/daily_tracker/resources/: configuration.schema.json  configuration.yaml
tests/: test__tracker_utils.py  test__utils.py  test_daily_tracker.py
tests/core/: test__apis.py  test__database.py  test__scheduler.py
tests/integrations/calendars/: test__outlook_mac.py
