[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[project]
name = "daily-tracker"
version = "0.0.0"
description = "An application for keeping track of tasks throughout the day."
authors = [{name = "billwallis"}]
readme = "README.md"
requires-python = ">=3.12,<3.13"  # Capped by `pywin32`
dependencies = [
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.0",
    "requests>=2.32.4",
    "slack-sdk>=3.36.0",
    "streamlit>=1.48.1",
    "ttkthemes>=3.2.2",
    "wakepy>=0.10.1",
    # platform-specific
    "pywin32==311; sys_platform == 'win32'",
    "appscript==1.2.2; sys_platform == 'darwin'",
]

[project.scripts]
daily-tracker = "daily_tracker.main:main"

[dependency-groups]
dev = [
    "coverage-badge>=1.1.0",
    "pre-commit>=4.3.0",
]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]


[tool.uv]
default-groups = "all"
required-version = ">=0.8,<1.0"
build-backend.namespace = true


[tool.pytest.ini_options]
addopts = "--cov=daily_tracker --cov-fail-under=10"
testpaths = ["tests"]


[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["F", "I", "N", "PL", "R", "RUF", "S", "UP", "W"]
ignore = []
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# https://github.com/astral-sh/ruff/issues/4368
[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",    #  Use of `assert` detected
    "PLR2004", #  Magic value used in comparison
    "PLR0913", #  Too many arguments in function definition
]
