[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[project]
name = "daily-tracker"
version = "0.0.0"
description = "An application for keeping track of tasks throughout the day."
authors = [{name = "billwallis"}]
readme = "README.md"
requires-python = ">=3.12,<3.13"  # Capped by `pywin32`
dependencies = [
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.0",
    "requests>=2.32.4",
    "slack-sdk>=3.36.0",
    "streamlit>=1.48.1",
    "ttkthemes>=3.2.2",
    "wakepy>=0.10.1",
    # platform-specific
    "pywin32==311; sys_platform == 'win32'",
    "appscript==1.2.2; sys_platform == 'darwin'",
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.3",
]

[project.scripts]
daily-tracker = "daily_tracker.main:main"

[dependency-groups]
dev = [
    "coverage-badge>=1.1.0",
    "poethepoet>=0.37.0",
    "pre-commit>=4.3.0",
]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]


[tool.uv]
default-groups = "all"
required-version = ">=0.8,<1.0"


[tool.pytest.ini_options]
addopts = "--cov=src --cov-fail-under=10"
testpaths = ["tests"]


[tool.poe]
verbosity = -1

[tool.poe.tasks]
run = "uv run -m daily_tracker"
test = "uv run pytest tests/ -v"
lint.shell = """
    echo -e "\\033[0;34mpre-commit checks\\033[0m"
    pre-commit run --all-files --hook-stage pre-commit
    echo -e "\\033[0;34mpre-push checks\\033[0m"
    pre-commit run --all-files --hook-stage pre-push
"""
lint.env = {SKIP = "identity"}


[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "ANN",   # flake8-annotations
    "B",     # flake8-bugbear
    "E",     # pycodestyle-error
    "F",     # Pyflakes
    "FURB",  # refurb
    "I",     # isort
    "N",     # pep8-naming
    "PL",    # Pylint
    "PERF",  # Perflint
    "RUF",   # Ruff-specific
    "S",     # flake8-bandit
    "TRY",   # tryceratops
    "UP",    # pyupgrade
    "W",     # pycodestyle-warning
]
ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "E501",    # Line too long
]
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# https://github.com/astral-sh/ruff/issues/4368
[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "ANN001",   # Missing type annotation for function argument
    "ANN201",   # Missing return type annotation for public function
    "S101",     # Use of `assert` detected
    "PLR2004",  # Magic value used in comparison
    "PLR0913",  # Too many arguments in function definition
]
