[build-system]
requires = ["uv_build>=0.8"]
build-backend = "uv_build"

[project]
name = "daily-tracker"
version = "0.0.0"
description = "An application for keeping track of tasks throughout the day."
authors = [{name = "billwallis"}]
readme = "README.md"
requires-python = ">=3.12,<3.13"  # Capped by `pywin32`
dependencies = [
    "cachetools>=6.2.6",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "ttkthemes>=3.3.0",
    "wakepy>=1.0.0",
]

[project.scripts]
daily-tracker = "daily_tracker.cli:main"

[dependency-groups]
dev = [
    "poethepoet>=0.41.0",
    "pre-commit>=4.5.1",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
# integrations
google-calendar = [
    "google-api-python-client>=2.190.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
]
outlook = [
    "pywin32==311; sys_platform == 'win32'",
    "appscript==1.2.2; sys_platform == 'darwin'",
]
slack = [
    "slack-sdk>=3.40.1",
]


[tool.uv]
default-groups = "all"
required-version = ">=0.8"


[tool.poe]
verbosity = -1
envfile.optional = ".env"

[tool.poe.tasks]
install.shell = """
    uv sync --refresh
    uv run pre-commit install --install-hooks
"""
upgrade.shell = """
    uv sync --refresh --upgrade
    uv run pre-commit autoupdate
"""
test = "uv run pytest -vvv"

[tool.poe.tasks.lint]
control.expr = "sys.platform"

[[tool.poe.tasks.lint.switch]]
case = "win32"
shell = """
    echo '=== pre-commit checks ==='
    SKIP=identity uv run pre-commit run --all-files --hook-stage pre-commit
    echo '=== pre-push checks ==='
    SKIP=identity uv run pre-commit run --all-files --hook-stage pre-push
"""

[[tool.poe.tasks.lint.switch]]
shell = """
    echo '\\033[0;34mpre-commit checks\\033[0m'
    SKIP=identity uv run pre-commit run --all-files --hook-stage pre-commit
    echo '\\033[0;34mpre-push checks\\033[0m'
    SKIP=identity uv run pre-commit run --all-files --hook-stage pre-push
"""


[tool.pytest.ini_options]
addopts = "--cov=src --cov-fail-under=10"
testpaths = ["tests"]


[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "ANN",   # flake8-annotations
    "B",     # flake8-bugbear
    "E",     # pycodestyle-error
    "F",     # Pyflakes
    "FURB",  # refurb
    "I",     # isort
    "N",     # pep8-naming
    "PL",    # Pylint
    "PERF",  # Perflint
    "RUF",   # Ruff-specific
    "S",     # flake8-bandit
    "UP",    # pyupgrade
    "W",     # pycodestyle-warning
]
ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "E501",    # Line too long
]
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# https://github.com/astral-sh/ruff/issues/4368
[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "ANN001",   # Missing type annotation for function argument
    "ANN201",   # Missing return type annotation for public function
    "S101",     # Use of `assert` detected
    "PLR2004",  # Magic value used in comparison
    "PLR0913",  # Too many arguments in function definition
]
