[metadata]
name = daily-tracker
description = An application for keeping track of tasks throughout the day.
author = Bill Wallis
platforms = win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = daily_tracker
python_requires = >=3.7
package_dir = =src
