[metadata]
name = daily-tracker
description = An application for keeping track of tasks throughout the day.
author = Bill Wallis
platforms = win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    daily_tracker
    daily_tracker.core
    daily_tracker.core.database
    daily_tracker.core.handlers
    daily_tracker.integrations
    daily_tracker.integrations.calendars
python_requires = >=3.7
package_dir = =src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
